@@ -10,5 +10,6 @@ System.Data/EnumerableRowCollection.cs
 System.Data/EnumerableRowCollectionExtensions.cs
 System.Data/EnumerableRowCollection_1.cs
 System.Data/OrderedEnumerableRowCollection.cs
+System.Data/RowEnumerableDataReader.cs
 System.Data/TypedTableBase.cs
 System.Data/TypedTableBaseExtensions.cs
