@@ -1,2 +1,3 @@
 System.Data/DataRowComparerTest.cs
+System.Data/DataTableExtensionsTest.cs
 System.Data/EnumerableRowCollectionTest.cs
