@@ -1,3 +1,10 @@
+2008-05-14  Atsushi Enomoto  <atsushi@ximian.com>
+
+	* System.Data.DataSetExtensions.dll.sources :
+	  added RowEnumerableDataReader.cs
+	* System.Data.DataSetExtensions_test.dll.sources :
+	  added DataTableExtensionsTest.cs.
+
 2008-05-13  Atsushi Enomoto  <atsushi@ximian.com>
 
 	* System.Data.DataSetExtensions_test.dll.sources : new.
